# ai-meeting-assistant

./: .env  README.md  meetings.db  pyproject.toml
src/meeting_assistant/: __init__.py  __main__.py  app.py  database.py  exporter.py  summarizer.py  transcriber.py
tests/: test_database.py
